Fix wrap in specialist info

--- a/_sass/minimal-mistakes/outorga-page/_sixth_block.scss
+++ b/_sass/minimal-mistakes/outorga-page/_sixth_block.scss
@@ -40,6 +40,10 @@
     .specialist-info {
       display: flex;
       flex-wrap: wrap;
+
+      @include breakpoint($medium) {
+        flex-wrap: nowrap;
+      }
     }
 
     .specialist-name {
